cmake_minimum_required(VERSION 3.12)
project(test_230)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED True)
set(CMAKE_PREFIX_PATH "../../src/variables_230/install")
find_package(variables_230 CONFIG REQUIRED)
set(CMAKE_PREFIX_PATH "../../src/variables_230_340/install")
find_package(variables_230_340 CONFIG REQUIRED)
set(CMAKE_PREFIX_PATH "../../src/variables_230_340_360/install")
find_package(variables_230_340_360 CONFIG REQUIRED)
set(CMAKE_PREFIX_PATH "../../src/packets_230/install")
find_package(packets_230 CONFIG REQUIRED)
set(CMAKE_PREFIX_PATH "../../src/packets_230_340/install")
find_package(packets_230_340 CONFIG REQUIRED)
set(CMAKE_PREFIX_PATH "../../src/packets_230_340_360/install")
find_package(packets_230_340_360 CONFIG REQUIRED)
add_executable(${PROJECT_NAME} test.cpp)
target_link_libraries(${PROJECT_NAME} PRIVATE packets_230::packets_230 packets_230_340::packets_230_340 packets_230_340_360::packets_230_340_360 variables_230::variables_230 variables_230_340::variables_230_340 variables_230_340_360::variables_230_340_360)
